index.css
body {
  font-family: Arial, sans-serif;
  background-color: #f4f4f4;
  margin: 0;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}
.hidden {
  display: none;
}
form {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 2rem;
  background-color: white;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  margin-bottom: 3rem;
}
input {
  width: calc(100% - 1rem);
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
}
input::placeholder {
  color: transparent;
}

select {
  width: 100%;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
}
textarea {
  width: calc(100% - 1rem);
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
  resize: vertical;
}

.active {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

button {
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 4px;
  background-color: #5cb85c;
  color: white;
  cursor: pointer;
}
.carroussel {
  height: 50px;
}

.footer-img {
  width: 50px;
  border-radius: 10px;
  animation: 4s ease-in slide infinite;
}

a {
  color: #007bff;
  text-decoration: none;
  font-weight: bold;
  padding: 0.5rem;
  border: 1px solid #007bff;
  border-radius: 25px;
}
a:hover {
  text-decoration: underline;
}
footer {
  text-align: center;
  margin-top: 20px;
  font-size: 0.9rem;
  color: #666;
  border-top: 1px solid #9b9b9b;
  padding-top: 2rem;
}

.input-container {
  position: relative;
}

#floating-placeholder {
  position: absolute;
  pointer-events: none;
  left: 15px;
  top: 10px;
  transition: 0.2s ease all;
  color: #999;
}
input:focus {
  outline: none;
  border-top-color: #cccccc9f;
}

input:focus ~ #floating-placeholder {
  top: -10px;
  left: 10px;
  font-size: 1rem;
  font-weight: 400;
  color: #000000;
  font-weight: 500;
  text-shadow: 2px 2px 2px #f4f4f4;
  padding: 0 5px;
}
/* When input has text, keep the placeholder floated */
input:not(:placeholder-shown) ~ #floating-placeholder {
  top: -10px;
  left: 10px;
  font-size: 1rem;
  font-weight: 400;
  color: #000000;
  font-weight: 500;
  text-shadow: 2px 2px 2px #f4f4f4;
  padding: 0 5px;
}
.qr-result {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  padding: 1rem;
  background-color: white;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

@keyframes slide {
  0% {
    opacity: 0;
    transform: translateX(+100%);
  }
  50% {
    opacity: 1;
    transform: translateX(0);
  }
  100% {
    opacity: 0;
    transform: translateX(-100%);
  }
}

